[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pycantonese"
version = "4.0.0"
description = "Cantonese Linguistics and NLP in Python"
readme = "README.rst"
requires-python = ">= 3.10"
license = "MIT"
authors = [ { name = "Jackson L. Lee", email = "jacksonlunlee@gmail.com" } ]
keywords = [
    "computational linguistics",
    "natural language processing",
    "NLP",
    "Cantonese",
    "linguistics",
    "corpora",
    "speech",
    "language",
    "Chinese",
    "Jyutping",
]
dependencies = ["rustling >= 0.6.0"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Natural Language :: Chinese (Traditional)",
    "Natural Language :: Cantonese",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: General",
    "Topic :: Text Processing :: Indexing",
    "Topic :: Text Processing :: Linguistic",
]

[project.urls]
Homepage = "https://pycantonese.org"
Source = "https://github.com/jacksonllee/pycantonese"

[project.optional-dependencies]
dev = [
    "black == 26.1.0",
    "build == 1.4.0",
    "flake8 == 7.3.0",
    "maturin >= 1.0",
    "pytest == 9.0.2",
    "requests == 2.32.5",
    "sybil == 9.3.0",
    "mypy == 1.19.1",
    "twine == 6.2.0",
    "pyarrow >= 18.0.0",  # For reading Parquet files in the CTCPC corpus.
]
docs = [
    "numpydoc >= 1.2",
    "Sphinx >= 4.3.0",
    "sphinx-copybutton >= 0.5.1",
    "sphinx-rtd-theme >= 1.1.0",
    "sphinxcontrib-googleanalytics >= 0.5",
]

[tool.maturin]
python-source = "src"
module-name = "pycantonese._rust"
features = ["extension-module", "parallel"]

[tool.uv.sources]
rustling = { path = "../rustling" }

[tool.pytest.ini_options]
addopts = "-vv --strict-markers --doctest-modules"
testpaths = ["tests", "docs"]
