[metadata]
name = pycantonese
version = 3.3.1
description = Cantonese Linguistics and NLP in Python
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://pycantonese.org
project_urls =
    Source = https://github.com/jacksonllee/pycantonese
    Tracker = https://github.com/jacksonllee/pycantonese/issues
    Changelog = https://pycantonese.org/changelog.html
download_url = https://pypi.org/project/pycantonese/#files
author = Jackson L. Lee
author_email = jacksonlunlee@gmail.com
license = MIT License
license_files = LICENSE.txt
keywords =
    computational linguistics
    natural language processing
    NLP
    Cantonese
    linguistics
    corpora
    speech
    language
    Chinese
    Jyutping
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: Chinese (Traditional)
    Natural Language :: Cantonese
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Human Machine Interfaces
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Text Processing
    Topic :: Text Processing :: Filters
    Topic :: Text Processing :: General
    Topic :: Text Processing :: Indexing
    Topic :: Text Processing :: Linguistic

[options]
packages = find:
python_requires = >= 3.7
install_requires =
    importlib-metadata >= 1.0 ; python_version < '3.8'
    pylangacq >= 0.16.0 , < 0.17.0
    wordseg == 0.0.2
zip_safe = false

[options.package_data]
pycantonese =
    data/hkcancor/*
    data/rime_cantonese/*
    pos_tagging/*.pickle

[flake8]
max-line-length = 88
extend-ignore = E203

[tool:pytest]
# Adding -p no:doctest to disable pytest's own doctest,
# which may interferes with Sybil's doctest parsers.
addopts = --verbose --strict-markers -p no:doctest

[coverage:run]
source = pycantonese/
branch = True

[coverage:report]
show_missing = True
